# expressive-shapes

./: .gitignore  CHANGELOG.md  README.md  draw_imgs.py  main.css  main.py  pyproject.toml
.github/workflows/: publish.yml
examples/gtk_or_fabric/: bezier_morph_shape.py  fabric_main.py  gtk_main.py
examples/images/: draw_imgs.py
geometry/: corner_rounding.py  polygon_measure.py  rounded_polygon.py
morph/: bezier_morph.py  debugger.py  linear_morph.py
shapes/: __init__.py  bezier_morph_shape.py  shape_presets.py  square.py  triangle.py
src/expressive_shapes/: __init__.py
src/expressive_shapes/geometry/: __init__.py  bezier_geometry.py  corner_rounding.py  polygon_measure.py  rounded_polygon.py
src/expressive_shapes/morph/: README.md  __init__.py  bezier_morph.py  debugger.py
src/expressive_shapes/shapes/: __init__.py  shape_presets.py
